<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClasseurCom</string>
    <string name="action_reset">Remise à zero</string>
    <string name="action_add">Ajouter un élement</string>
    <string name="action_import">Importer BDD</string>
    <string name="action_export">Exporter BDD</string>
    <string name="list_en_cours">Phrase en cours</string>
    <string name="title_grid">Liste des catégories</string>
    <string name="message_dialog_mod_cat">Voulez vous modifier/supprimer cette catégorie ?</string>
    <string name="message_dialog_mod_item">Voulez vous modifier/supprimer cette objet ?</string>
    <string name="message_dialog_del_item">Voulez vous vraiment retirer cet objet ?</string>
    <string name="message_dialog_import_title">Importer une nouvelle BDD ?</string>
    <string name="message_dialog_import">Voulez vous vraiment importer une BDD ?\nCa supprimera la base actuel !</string>
    <string name="title_progress_export">Exportation &#8230;</string>
    <string name="message_progress_export">Exportation en cours, veuillez patienter et ne quitter pas l\'application !</string>
    <string name="title_progress_import">Importation &#8230;</string>
    <string name="message_progress_import">Importation en cours, veuillez patienter et ne quitter pas l\'application !</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="title_activity_add">Ajout d\'un élement</string>
    <string name="title_activity_modify">Modification d\'un élement</string>
    <string name="tv_type">Type élément :</string>
    <string name="tv_categorie">Catégorie de l\'objet :</string>
    <string name="tv_name_item">Nom :</string>
    <string name="tv_image_item">Image :</string>
    <string name="bt_ajouter">Ajouter</string>
    <string name="bt_add_image">Ajouter image</string>
    <string name="bt_take_image">Prendre une photo</string>
    <string name="bt_modifier">Modifier</string>
    <string name="bt_supprimer">Supprimer</string>
    <string name="probleme_champs">Tous les champs n\'ont pas été remplis</string>
    <string name="probleme_cat_vide">Catégorie vide</string>
    <string name="probleme_existe_deja">Existe déjà !</string>
    <string name="probleme_categorie_non_vide">Impossible de supprimer cette catégorie. Elle est non vide !</string>
    <string name="select_picture">Choisissez une image</string>
    <string name="export_done_title">Export de la BDD réussi</string>
    <string name="export_done_message">Le fichier \"BDDClasseurCom.txt\" c\'est votre base de donnée exporté et le dossier \"ClasseurCom_images\" qui se trouve à la racine de la mémoire interne se sont les images.</string>
    <string name="import_done_title">Importation de la BDD réussi</string>
    <string name="import_done_message">N\'oubliez pas de copier à la racine de la mémoire interne le dossier \"ClasseurCom_images\" pour avoir vos images</string>
    <string name="import_fail_title">Importation échoué</string>
    <string name="import_fail_message">L\'importation a échoué, le fichier est incorrect. Si le fichier n\'a pas été modifié, il se nomme \"BDDClasseurCom.txt\"</string>
    <string name="image_desc">Image de prévisualisation</string>

    <string-array name="type_item">
        <item>Objet</item>
        <item>Categorie</item>
    </string-array>

</resources>
